refactor(project): add on every subscriber the error method call